# reserach-lab

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: .dev-container.json  devcontainer.json
config/: symbols.txt
qsentia/: cli.py
qsentia/bronze/: load_aggregates.py  load_news.py
qsentia/silver/: normalize_aggregates.py  normalize_news.py
qsentia/utils/: watermark.py
qsentia/vendors/: polygon.py
