[project]
name = "qsentia-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "tenacity>=8.4",
  "pydantic>=2.6",
  "pandas>=2.2",
  "pyarrow>=15",
  "duckdb>=1.0",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "rich>=13.7",
  "pandera>=0.20"
]

[tool.uv]  # if using uv (recommended)